# osu-api-server-rs

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md
src/: config.rs  main.rs  routes.rs
src/api/: v2.rs
src/handlers/: assets.rs  beatmap.rs  beatmap_attributes.rs  beatmap_difficulty_attributes.rs  beatmap_with_attributes.rs  beatmapset.rs  mod.rs  osu_error.rs  osu_match.rs  score.rs  user.rs
src/routes/: mod.rs
src/utils/: cache_api_assets.rs  cal_beatmap_attrs.rs  download_file.rs  mod.rs  replace_assets_urls.rs
